--- a/tinker/templates/home.html
+++ b/tinker/templates/home.html
@@ -30,7 +30,7 @@
                     <div class="content">
                         <div class="icon-big icon-warning text-center">
                             <a href="{{ url_for('faculty-bio.FacultyBioView:index') }}">
-                                <i class="fa fa-users fa-4x" aria-hidden="true" style='width:100%'></i>
+                                <i class="fa fa-user fa-4x" aria-hidden="true" style='width:100%'></i>
                             </a>
                         </div>
                     </div>
