Removed old icons

--- a/tinker/templates/creativeTim_sidebar.html
+++ b/tinker/templates/creativeTim_sidebar.html
@@ -55,9 +55,9 @@
                         {% if 'Administrators' in session['groups'] %}
                             <li><a href="/admin/publish-manager">Publisher</a></li>
                             <li><a href="/admin/sync">Sync Metadata</a></li>
-                            {#                                <li><a href="/admin/blink-roles" class="button-nav">Blink Layout Owners</a></li>#}
+                            <li><a href="/admin/blink-roles" class="button-nav">Blink Layout Owners</a></li>
+                            <li><a href="/admin/program-search">Program Search Tags</a></li>
                         {% endif %}
-                        <li><a href="/admin/program-search">Program Search Tags</a></li>
                         <li><a href="/admin/cache-clear">Clear Cache</a></li>
                         <li><a href="/admin/redirect"><i class="fa fa-arrows-alt" aria-hidden="true"></i>Redirects</a></li>
                     </ul>
