--- a/tinker/templates/creativeTim_sidebar.html
+++ b/tinker/templates/creativeTim_sidebar.html
@@ -121,6 +121,7 @@
                                     <li><a href="/admin/sync">Sync Metadata</a></li>
                                     {#                                <li><a href="/admin/blink-roles" class="button-nav">Blink Layout Owners</a></li>#}
                                 {% endif %}
+                                <li><a href="/admin/program-search">Program Search Tags</a></li>
                                 <li><a href="/admin/cache-clear">Clear Cache</a></li>
                                 <li><a href="/admin/redirect">Redirects</a></li>
                             </ul>
