--- a/tinker/admin/program_search/templates/program-search-home.html
+++ b/tinker/admin/program_search/templates/program-search-home.html
@@ -11,7 +11,7 @@
 
 {% block main_content %}
     <div class="content">
-        <div class="row">
+        <div class="container-fluid">
             <form id='program_search_form' method="post">
                 <div class="card">
                     <div class="content">
@@ -67,7 +67,7 @@
                             </div>
                         </div>
                         <div class="content">
-                            <button type="submit" class="btn btn-primary">Submit</button>
+                            <button id="program-submit" type="submit" class="btn btn-primary">Submit</button>
                         </div>
                     </label>
                 </div>
@@ -97,25 +97,6 @@
             </div>
         </div>
     </div>
-    <!-- Modal Core -->
-    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
-         aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal"
-                            aria-hidden="true">&times;</button>
-                    <h4 class="modal-title" id="myModalLabel">Are you sure you want to delete?</h4>
-                </div>
-                <div class="modal-body">
-                    Any programs you have checked will be deleted.
-                </div>
-                <div class="modal-footer">
-                    <a id="modal-confirm" href="#"
-                       class="btn btn-primary btn-alert modal-confirm" id="modal-confirm">Delete</a>
-                </div>
-            </div>
-        </div>
     </div>
 {% endblock %}
 
@@ -133,6 +114,18 @@
                 timer = setTimeout(callback, ms);
             };
         })();
+
+        $("#program-submit").click(function () {
+            $.notify({
+                message: 'You have successfully submitted your program'
+            }, {
+                type: 'success',
+                placement: {
+                    align: 'center'
+                },
+
+            });
+        });
 
         $(".search-input").keyup(function () {
             delay(function () {
@@ -206,7 +199,7 @@
 
             $.ajax({
                 type: "POST",
-                url: "{{ url_for('program_search.ProgramSearchView:post') }}",
+                url: "{{ url_for('program_search.ProgramSearchView:submit') }}",
                 data: JSON.stringify(formData),
                 contentType: 'application/json;charset=UTF-8',
                 success: function (result) {
@@ -216,5 +209,27 @@
             return false;
         });
     </script>
+
+    {% block modalhtml %}
+        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+             aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal"
+                                aria-hidden="true">&times;</button>
+                        <h4 class="modal-title" id="myModalLabel">Are you sure you want to delete?</h4>
+                    </div>
+                    <div class="modal-body">
+                        Any programs you have checked will be deleted.
+                    </div>
+                    <div class="modal-footer">
+                        <a id="modal-confirm" class="btn btn-primary btn-alert modal-confirm"
+                           id="modal-confirm" data-dismiss="modal">Delete</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    {% endblock %}
 
 {% endblock %}
