Updated file names and added more icons

--- a/tinker/templates/creative_tim_base.html
+++ b/tinker/templates/creative_tim_base.html
@@ -1,4 +1,4 @@
-{% import 'creativeTim_sidebar.html' as nav_collapse %}
+{% import 'creative_tim_sidebar.html' as nav_collapse %}
 <!DOCTYPE html>
 
 {% block html_attribs %}
