--- a/tinker/templates/tinker_base.html
+++ b/tinker/templates/tinker_base.html
@@ -1,7 +1,7 @@
-{% extends 'creativeTim_base.html' %}
-{% import 'creativeTim_sidebar.html' as sidebar %}
+{% extends 'creative_tim_base.html' %}
+{% import 'creative_tim_sidebar.html' as sidebar %}
 {% import 'nav.html' as nav %}
-{% import 'creativeTim_footer.html' as footer %}
+{% import 'creative_tim_footer.html' as footer %}
 
 {% block title %}{{ title }} | Tinker{% endblock %}
 
