--- a/tinker/static/assets/css/tinker.css
+++ b/tinker/static/assets/css/tinker.css
@@ -1,3 +1,16 @@
+.spinner {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    margin-left: -50px; /* half width of the spinner gif */
+    margin-top: -50px; /* half height of the spinner gif */
+    text-align: center;
+    z-index: 1234;
+    overflow: auto;
+    width: 100px; /* width of the spinner gif */
+    height: 102px; /* height of the spinner gif +2px to fix IE8 issue */
+}
+
 .redirect-row {
     cursor: pointer;
 }
@@ -186,6 +199,10 @@ ul.btn-group-horizontal li {
     margin-bottom: 0px;
 }
 
+.more-margin-bottom {
+    margin-bottom: 10px;
+}
+
 label {
     margin-bottom: 5px !important;
     width: 100%;
@@ -200,6 +217,10 @@ div.checkbox-label {
 
 label.checkbox-label {
     width: auto;
+}
+
+#redirects-checklabel {
+    margin-bottom: 0px !important;
 }
 
 input#author {
@@ -519,7 +540,7 @@ input[type='checkbox']:checked:hover:after {
 
 /* Notifications */
 [data-notify="container"].alert {
-    padding: 15px!important;
+    padding: 15px !important;
     width: 40%;
     color: #FFFFFF;
     background-color: #0069AA;
@@ -559,7 +580,7 @@ input[type='checkbox']:checked:hover:after {
     }
 }
 
-.other, .topic, .delete-checkbox{
+.other, .topic, .delete-checkbox {
     margin-left: 20% !important
 }
 
