added table class to tables

--- a/tinker/admin/program_search/templates/index.html
+++ b/tinker/admin/program_search/templates/index.html
@@ -51,7 +51,7 @@
             </form>
         </div>
 
-        <table>
+        <table class="table">
             <thead>
                 <tr>
                     <th>Program Concentration</th>
