--- a/tinker/admin/redirects/templates/redirects.html
+++ b/tinker/admin/redirects/templates/redirects.html
@@ -47,7 +47,7 @@
 
                 <div class="row">
                     <div class="col-md-12">
-                        <table>
+                        <table class="table">
                             <thead>
                             <tr>
                                 <th width="400">From Path</th>
