removed old files

--- a/tinker/admin/program_search/templates/program-search-home.html
+++ b/tinker/admin/program_search/templates/program-search-home.html
@@ -74,7 +74,7 @@
             </form>
             <div class="row">
                 <div class="large-12 columns">
-                    <table>
+                    <table class="table">
                         <thead>
                         <tr>
                             <th width="600">Program Concentration</th>
