Updated unit tests' expected responses to match updated templates
In theory, this should allow the Pull Request to go through now.

--- a/tinker/e_announcements/templates/confirm.html
+++ b/tinker/e_announcements/templates/confirm.html
@@ -9,6 +9,7 @@
             <div class="col-md-12">
                 <h3>Congrats!</h3>
                 {% if status == 'new' %}
+                    <input type="hidden" id="new_eaid" value="{{ new_eaid }}"/>
                     <p>
                         You've successfully created your E-Announcement. Once your E-Announcement has been approved, it
                         will appear on your Tinker <a href="{{ url_for('e-announcements.EAnnouncementsView:index') }}">E-Announcement
