--- a/tinker/events/templates/submit-confirm.html
+++ b/tinker/events/templates/submit-confirm.html
@@ -9,6 +9,7 @@
     <div class="content">
         <div class="container-fluid">
             <div class="col-md-12">
+                <input type="hidden" id="new_eid" value="{{ eid }}"/>
                 <h3 class="first-subtitle">
                     Thanks for your submission!
                 </h3>
